syntax = "proto3";

package template;

option go_package = "github.com/iaiw3br/emergency-messages/internal/controllers;api";

service Template {
  rpc CreateV2(CreateRequest) returns(EmptyResponse);
  rpc UpdateV2(UpdateRequest) returns(EmptyResponse);
  rpc DeleteV2(DeleteRequest) returns(EmptyResponse);
}

message CreateRequest {
  string subject = 1;
  string text = 2;
}

message EmptyResponse {}

message UpdateRequest {
  string id = 1;
  string subject = 2;
  string text = 3;
}

message DeleteRequest {
  string id = 1;
}